Record navigations in extension-based apps to history.

This CL addresses a bug where bookmark apps (including desktop PWAs) do
not have their navigations record to Chrome history.

Chrome Packaged apps do not have a |browser| object, so removing the is_app()
check will not affect them.

BUG=821685

Change-Id: I87356b6c6d3dad5e4cc321966bf385975adac995
Reviewed-on: https://chromium-review.googlesource.com/c/1388045
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Christian Dullweber <dullweber@chromium.org>
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619581}
Former-commit-id: 31ef5b44a15160bcc4acdde7b4d073876ecb9b6f